@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Controller
@@ -26,12 +27,15 @@ public class PersonaController {
 @Autowired
 private IPersonaService personaService;
 
+private static final String ID_USUARIO = "idUsuario";
+
 
 
     @GetMapping({ "", "/jefes" })
     public String miembrosYJefes(Model model, HttpSession session,
                                  @RequestParam(required = false) Boolean cancelado,
-                                 HttpServletRequest request) {
+                                 HttpServletRequest request,
+                                 @RequestParam(defaultValue = "activos") String tab) {
         Object rol = session.getAttribute("rol");
         String path = request.getRequestURI(); //
 
@@ -40,26 +44,49 @@ private IPersonaService personaService;
         }
 
         if (rol.equals(Rol.ADULTO.name())) {
+            Persona sesionDelJefe = personaService.personaModelSession(ID_USUARIO, session);
+            model.addAttribute("persona", sesionDelJefe);
             if (path.endsWith("/jefes")) {
+
                 session.setAttribute("miembro", "jefe");
                 if (Boolean.TRUE.equals(cancelado)) {
                     model.addAttribute(EXCEPTION_MESSAGE, "Registro cancelado.");
                     model.addAttribute("type", EXCEPTION_INFO);
                 }
-                model.addAttribute("jefes",
-                        personaService.findJefes().stream()
-                                .sorted(Comparator.comparing(Persona::getRama))
-                                .toList()
-                );
+                List<Persona> jefes = personaService.findJefes();
+
+                List<Persona> jefesFiltrados = jefes.stream()
+                        .filter(p -> {
+                            boolean estado = p.getUserEntity().isActivo(); // Supongo que 'estado' es booleano
+                            return "inactivos".equals(tab) ? !estado : estado; // Filtra por estado (activo o inactivo)
+                        })
+                        .collect(Collectors.toList());
+
+                model.addAttribute("tab", tab);
+                model.addAttribute("jefes", jefesFiltrados);
+
                 return "miembros/consultarJefes";
             } else {
                 session.setAttribute("miembro", "miembro");
                 if (Boolean.TRUE.equals(cancelado)) {
                     model.addAttribute(EXCEPTION_MESSAGE, "Registro cancelado.");
                     model.addAttribute("type", EXCEPTION_INFO);
+
                 }
+                List<Persona> miembros = personaService.findMiembros();
+
+                List<Persona> miembrosFiltrados = miembros.stream()
+                        .filter(p -> {
+                            boolean estado = p.getUserEntity().isActivo();
+                            return "inactivos".equals(tab) ? !estado : estado;
+                        })
+                        .collect(Collectors.toList());
+
+                model.addAttribute("tab", tab);
+                model.addAttribute("miembros", miembrosFiltrados);
                 return "miembros/consultarMiembros";
             }
+
         }
 
         return VISTA_ERROR;
